--- a/include/mariadb_version.h.in
+++ b/include/mariadb_version.h.in
@@ -11,7 +11,9 @@
 #else
 #define PROTOCOL_VERSION		@PROTOCOL_VERSION@
 #define MARIADB_CLIENT_VERSION_STR	"@MARIADB_CLIENT_VERSION@"
+#ifndef MARIADB_BASE_VERSION
 #define MARIADB_BASE_VERSION		"@MARIADB_BASE_VERSION@"
+#endif
 #define MARIADB_VERSION_ID		@MARIADB_VERSION_ID@
 #define MARIADB_PORT	        	@MARIADB_PORT@
 #define MARIADB_UNIX_ADDR               "@MARIADB_UNIX_ADDR@"
@@ -24,7 +26,9 @@
 
 #define MYSQL_CONFIG_NAME               "my"
 #define MYSQL_VERSION_ID                @MARIADB_VERSION_ID@
+#ifndef MYSQL_SERVER_VERSION
 #define MYSQL_SERVER_VERSION            "@MARIADB_CLIENT_VERSION@-MariaDB"
+#endif
 
 #define MARIADB_PACKAGE_VERSION "@CPACK_PACKAGE_VERSION@"
 #define MARIADB_PACKAGE_VERSION_ID @MARIADB_PACKAGE_VERSION_ID@
