--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ IF(COMMAND CMAKE_POLICY)
 ENDIF()
 
 
-PROJECT(mariadb-connector-c C)
+PROJECT(ob-connector-c C)
 
 # Is C/C built as subproject?
 get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)
@@ -52,8 +52,8 @@ ENDMACRO()
 
 ### Options ###
 IF(NOT WIN32)
-	#ADD_OPTION(WITH_MYSQLCOMPAT "creates libmysql* symbolic links" OFF)
-	ADD_OPTION(WITH_MYSQLCOMPAT "creates libmysql* symbolic links" ON)
+	ADD_OPTION(WITH_MYSQLCOMPAT "creates libmysql* symbolic links" OFF)
+	#ADD_OPTION(WITH_MYSQLCOMPAT "creates libmysql* symbolic links" ON)
 ELSE()
   ADD_OPTION(WITH_MSI "Build MSI installation package" OFF)
   ADD_OPTION(WITH_SIGNCODE "digitally sign files" OFF)
@@ -409,33 +409,68 @@ IF(CLIENT_DOCS)
           COMPONENT SharedLibraries)
 ENDIF()
 
-
 IF(WIN32 AND WITH_MSI AND CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
   ADD_SUBDIRECTORY(win/packaging)
 ENDIF()
 MESSAGE1(SYSTEM_PROCESSOR "SYSTEM processor: ${CMAKE_SYSTEM_PROCESSOR}")
 SET(CPACK_PACKAGE_VENDOR "MariaDB Corporation Ab")
 SET(CPACK_PACKAGE_DESCRIPTION "MariaDB Connector/C. A library for connecting to MariaDB and MySQL servers")
-SET(CPACK_PACKAGE_NAME "mariadb_connector_c")
+SET(CPACK_PACKAGE_NAME "ob_connector_c")
 STRING(TOLOWER ${CMAKE_SYSTEM_NAME} system_name)
 SET(CPACK_RESOURCE_FILE_LICENSE "${CC_SOURCE_DIR}/COPYING.LIB")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CC_SOURCE_DIR}/README")
 INCLUDE(cmake/ConnectorName.cmake)
-IF(NOT PACKAGE_STATUS_SUFFIX)
-  SET(CPACK_SOURCE_PACKAGE_FILE_NAME "mariadb-connector-c-${CPACK_PACKAGE_VERSION}-src")
-  IF(PACKAGE_PLATFORM_SUFFIX)
-    SET(CPACK_PACKAGE_FILE_NAME "mariadb-connector-c-${CPACK_PACKAGE_VERSION}-${PACKAGE_PLATFORM_SUFFIX}")
+
+IF(NOT WIN32)
+  IF(NOT PACKAGE_STATUS_SUFFIX)
+    SET(CPACK_SOURCE_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION}-src")
+    IF(PACKAGE_PLATFORM_SUFFIX)
+      SET(CPACK_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION}-${PACKAGE_PLATFORM_SUFFIX}")
+    ELSE()
+      SET(CPACK_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION}-${system_name}-${CMAKE_SYSTEM_PROCESSOR}")
+    ENDIF()
   ELSE()
-    SET(CPACK_PACKAGE_FILE_NAME "mariadb-connector-c-${CPACK_PACKAGE_VERSION}-${system_name}-${CMAKE_SYSTEM_PROCESSOR}")
+    SET(CPACK_SOURCE_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION}-${PACKAGE_STATUS_SUFFIX}-src")
+    IF(PACKAGE_PLATFORM_SUFFIX)
+      SET(CPACK_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION}-${PACKAGE_STATUS_SUFFIX}-${PACKAGE_PLATFORM_SUFFIX}")
+    ELSE()
+      SET(CPACK_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION}-${PACKAGE_STATUS_SUFFIX}-${system_name}-${CMAKE_SYSTEM_PROCESSOR}")
+    ENDIF()
   ENDIF()
 ELSE()
-  SET(CPACK_SOURCE_PACKAGE_FILE_NAME "mariadb-connector-c-${CPACK_PACKAGE_VERSION}-${PACKAGE_STATUS_SUFFIX}-src")
-  IF(PACKAGE_PLATFORM_SUFFIX)
-    SET(CPACK_PACKAGE_FILE_NAME "mariadb-connector-c-${CPACK_PACKAGE_VERSION}-${PACKAGE_STATUS_SUFFIX}-${PACKAGE_PLATFORM_SUFFIX}")
+  IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
+    SET(PLATFORM "win64")
   ELSE()
-    SET(CPACK_PACKAGE_FILE_NAME "mariadb-connector-c-${CPACK_PACKAGE_VERSION}-${PACKAGE_STATUS_SUFFIX}-${system_name}-${CMAKE_SYSTEM_PROCESSOR}")
+    SET(PLATFORM "win32")
+  ENDIF()
+
+  string(TIMESTAMP COMPILE_TIME %Y%m%d%H%M%S)
+  MESSAGE(STATUS ${COMPILE_TIME})
+
+  SET(CPACK_PACKAGE_VERSION_RPM ${CPACK_PACKAGE_VERSION})
+  file(STRINGS ./rpm/libobclient-VER.txt STRLIST LIMIT_COUNT 1)
+  foreach(STR IN LISTS STRLIST)
+    SET(CPACK_PACKAGE_VERSION_RPM ${STR})
+  endforeach(STR)
+  
+  IF(NOT PACKAGE_STATUS_SUFFIX)
+    SET(CPACK_SOURCE_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION_RPM}-src")
+    IF(PACKAGE_PLATFORM_SUFFIX)
+      SET(CPACK_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION_RPM}-${PACKAGE_PLATFORM_SUFFIX}")
+    ELSE()
+      SET(CPACK_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION_RPM}-${system_name}-${PLATFORM}-${COMPILE_TIME}")
+    ENDIF()
+  ELSE()
+    SET(CPACK_SOURCE_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION_RPM}-${PACKAGE_STATUS_SUFFIX}-src")
+    IF(PACKAGE_PLATFORM_SUFFIX)
+      SET(CPACK_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION_RPM}-${PACKAGE_STATUS_SUFFIX}-${PACKAGE_PLATFORM_SUFFIX}")
+    ELSE()
+      SET(CPACK_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION_RPM}-${PACKAGE_STATUS_SUFFIX}-${system_name}-${PLATFORM}-${COMPILE_TIME}")
+    ENDIF()
   ENDIF()
 ENDIF()
+
+
 # Build source packages
 IF(GIT_BUILD_SRCPKG)
   # get branch name
