--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,26 @@ ENDFOREACH()
 SET(CC_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(CC_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
-SET(CPACK_PACKAGE_VERSION_MAJOR 20)
-SET(CPACK_PACKAGE_VERSION_MINOR 1)
-SET(CPACK_PACKAGE_VERSION_PATCH 13)
+SET(CPACK_PACKAGE_VERSION_MAJOR 0)
+SET(CPACK_PACKAGE_VERSION_MINOR 0)
+SET(CPACK_PACKAGE_VERSION_PATCH 0)
+
+#get rpm version for Win pack and mariadb_version.h.in
+SET(CPACK_PACKAGE_VERSION_RPM "1.0.0")
+file(STRINGS ./rpm/libobclient-VER.txt STRLIST LIMIT_COUNT 1)
+foreach(STR IN LISTS STRLIST)
+  SET(CPACK_PACKAGE_VERSION_RPM ${STR})
+endforeach(STR)
+
+string(REPLACE "." ";" VERSION_LIST ${CPACK_PACKAGE_VERSION_RPM})
+list(GET VERSION_LIST 0 CPACK_PACKAGE_VERSION_MAJOR)
+list(GET VERSION_LIST 1 CPACK_PACKAGE_VERSION_MINOR)
+list(GET VERSION_LIST 2 CPACK_PACKAGE_VERSION_PATCH)
+list(LENGTH VERSION_LIST len)
+IF(len EQUAL 4)
+  list(GET VERSION_LIST 3 CPACK_PACKAGE_VERSION_EXTRA)
+ENDIF()
+
 SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 MATH(EXPR MARIADB_PACKAGE_VERSION_ID "${CPACK_PACKAGE_VERSION_MAJOR} * 10000 +
                             ${CPACK_PACKAGE_VERSION_MINOR} * 100   +
@@ -126,6 +143,13 @@ SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DDBUG_OFF")
 SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DDBUG_OFF")
 SET(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} -DDBUG_OFF")
 SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -DDBUG_OFF")
+
+IF(UNIX)
+  SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -z noexecstack -z now -pie -fPIC -fstack-protector-all")
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -z noexecstack -z now -pie -fPIC -fstack-protector-all")
+  SET(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} -z noexecstack -z now -pie -fPIC -fstack-protector-all")
+  SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -z noexecstack -z now -pie -fPIC -fstack-protector-all")
+ENDIF()
 
 IF(CMAKE_COMPILER_IS_GNUCC)
   INCLUDE(CheckCCompilerFlag)
@@ -446,12 +470,6 @@ ELSE()
 
   string(TIMESTAMP COMPILE_TIME %Y%m%d%H%M%S)
   MESSAGE(STATUS ${COMPILE_TIME})
-
-  SET(CPACK_PACKAGE_VERSION_RPM ${CPACK_PACKAGE_VERSION})
-  file(STRINGS ./rpm/libobclient-VER.txt STRLIST LIMIT_COUNT 1)
-  foreach(STR IN LISTS STRLIST)
-    SET(CPACK_PACKAGE_VERSION_RPM ${STR})
-  endforeach(STR)
   
   IF(NOT PACKAGE_STATUS_SUFFIX)
     SET(CPACK_SOURCE_PACKAGE_FILE_NAME "ob-connector-c-${CPACK_PACKAGE_VERSION_RPM}-src")
