--- a/include/mariadb_version.h.in
+++ b/include/mariadb_version.h.in
@@ -45,4 +45,20 @@
 /* Source information */
 #define CC_SOURCE_REVISION "@CC_SOURCE_REVISION@"
 
+#ifndef LIBOBCLIENT_VERSION_MAJOR
+#define LIBOBCLIENT_VERSION_MAJOR @CPACK_PACKAGE_VERSION_MAJOR@
+#endif
+
+#ifndef LIBOBCLIENT_VERSION_MINOR
+#define LIBOBCLIENT_VERSION_MINOR @CPACK_PACKAGE_VERSION_MINOR@
+#endif
+
+#ifndef LIBOBCLIENT_VERSION_PATCH
+#define LIBOBCLIENT_VERSION_PATCH @CPACK_PACKAGE_VERSION_PATCH@
+#endif
+
+#ifndef LIBOBCLIENT_VERSION
+#define LIBOBCLIENT_VERSION "@CPACK_PACKAGE_VERSION_RPM@"
+#endif
+
 #endif /* _mariadb_version_h_ */
