--- a/unittest/ob20_test/Makefile
+++ b/unittest/ob20_test/Makefile
@@ -1,7 +1,7 @@
 CFLAGS= -I../../include
 CCFLAGS= -I../../include
 LDFLAGS= -g -L ../../libmariadb/ -lobclnt -lz -lpthread -lgtest
-BIN=ob20_appinfo_test ob20_trans_test ob20_clientinfo_test ob20_slowquery_test ob20_bigpacket_response_test ob20_bigpacket_request_test
+BIN=ob20_appinfo_test ob20_trans_test ob20_clientinfo_test ob20_slowquery_test ob20_bigpacket_response_test ob20_bigpacket_request_test ob20_show_trace_test
 EXEC=env LD_LIBRARY_PATH=../../libmariadb/:${LD_LIBRARY_PATH}
 all:${BIN}
 .PHONY:clean
@@ -11,6 +11,7 @@ ob20_clientinfo_test:ob20_clientinfo_test.c
 ob20_slowquery_test:ob20_slowquery_test.c
 ob20_bigpacket_response_test:ob20_bigpacket_response_test.c
 ob20_bigpacket_request_test:ob20_bigpacket_request_test.c
+ob20_show_trace_test:ob20_show_trace_test.c
 # run:
 # 	$(EXEC) ./ob_oracle_array_binding_test
 clean:
